chore(runtime-core): add type

--- a/exmanple/helloworld/index.html
+++ b/exmanple/helloworld/index.html
@@ -13,10 +13,28 @@
       .blue {
         color: blue;
       }
+
+      ._center {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .w-full {
+        width: 100%;
+      }
+
+      .h-full {
+        height: 100%;
+      }
+
+      .pt-24 {
+        padding-top: 24px;
+      }
     </style>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="_center w-full h-full pt-24"></div>
     <script src="main.js" type="module"></script>
   </body>
 </html>
