--- a/exmanple/helloworld/index.html
+++ b/exmanple/helloworld/index.html
@@ -28,8 +28,21 @@
         height: 100%;
       }
 
+      .p-24 {
+        padding: 24px;
+      }
+
       .pt-24 {
         padding-top: 24px;
+      }
+
+      .m-12 {
+        margin: 12px;
+      }
+
+      .border-1 {
+        border: 1px solid greenyellow;
+        border-radius: 4px;
       }
     </style>
   </head>
